//syntax = "proto3";  // Remove every optional when switching to proto3

package masmusic;

// option cc_enable_arenas = true;  // protoc v3 only
option java_generate_equals_and_hash = true;
option java_multiple_files = true;
option java_outer_classname = "MasMusicProto";
option java_package = "uk.ac.bath.masmusic.protobuf";

enum Note
{
    option allow_alias = true;
    C       =  0;
    C_SHARP =  1;
    D_FLAT  =  1;
    D       =  2;
    D_SHARP =  3;
    E_FLAT  =  3;
    E       =  4;
    F       =  5;
    F_SHARP =  6;
    G_FLAT  =  6;
    G       =  7;
    G_SHARP =  8;
    A_FLAT  =  8;
    A       =  9;
    A_SHARP = 10;
    B_FLAT  = 10;
    B       = 11;
}

message Pitch
{
    optional int32 octave = 1;
    optional Note note = 2;
}

// A note at a specific point in time
message TimePointNote
{
    optional int64 timestamp = 1;  // Timestamp since epoch in milliseconds
    optional Pitch pitch = 2;
    optional uint32 velocity = 3;  // Velocity value, should be in the range 0-127
}

// A note played on a span of time
message TimeSpanNote
{
    optional int64 timestamp = 1;  // Timestamp since epoch in milliseconds
    optional Pitch pitch = 2;
    optional uint32 velocity = 3;  // Velocity value, should be in the range 0-127
    optional uint32 duration = 4;  // Note duration
}

message Scale
{
    optional Note fundamental = 1;  // Scale fundamental
    optional string type = 2;       // Scale type name
}

message Beat
{
    optional int32 duration = 1;  // Beat duration (ms)
    optional int32 phase = 2;     // Beat phase (ms)
}

message TimeSignature
{
    optional int32 beats = 1;  // Number of beats in a bar
    optional int32 unit = 2;   // Beat unit (1 = whole, 2 = half, 4 = quarter, etc)
}

message Rhythm 
{
    optional Beat beat = 1;  // Rhythm beat
    optional TimeSignature timeSignature = 2;  // Rhythm time signature
    optional int32 beatOffset = 3;  // Distance between first beat and first bar
}

message Direction {
    optional Rhythm rhythm = 1;
    optional Scale scale = 2;
}
